fix(css): Ensure text stays readable when buttons flowboxchild is selected
fixes #173

--- a/data/styles/application.css
+++ b/data/styles/application.css
@@ -141,6 +141,10 @@
     color: @banner_fg_color;
 }
 
+.banner flowboxchild:selected button.text-button label {
+    color: @banner_bg_color;
+}
+
 .banner progressbar text {
     padding: 3px;
     background-color: transparent;
